Closed Bug 1410304 Opened 7 years ago Closed 7 years ago

Fix of Bug 1372083 for ANGLE was removed by Bug 1371190

Categories

(Core :: Graphics, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla58
Tracking Status
firefox58 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

Attachments

(1 file)

Somehow Bug 1372083 for ANGLE was not applied by Bug 1371190. It re-cause the problem of Bug 1372083.
Assignee: nobody → sotaro.ikeda.g
Blocks: 1371190
Attachment #8920457 - Flags: review?(jgilbert)
Summary: Patch of Bug 1372083 for ANGLE was not applied by Bug 1371190 → Fix of Bug 1372083 for ANGLE was removed by Bug 1371190
Attachment #8920457 - Flags: review?(jgilbert) → review+
Pushed by sikeda@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/8dba09333346
Do not compare depth in attachmentsHaveSameDimensions() r=jgilbert
https://hg.mozilla.org/mozilla-central/rev/8dba09333346
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla58
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: