Bug 1410304 - Do not compare depth in attachmentsHaveSameDimensions() r=jgilbert