gfx/angle/src/libANGLE/Framebuffer.cpp
@@ -371,7 +371,9 @@ bool FramebufferState::attachmentsHaveSameDimensions() const
             return false;
         }
 
-        return (attachment.getSize() != attachmentSize.value());
+        const Extents &size = attachment.getSize();
+        return size.width != attachmentSize.value().width ||
+            size.height != attachmentSize.value().height;
     };
 
     for (const auto &attachment : mColorAttachments)
